[package]
name = "solana-rpc-get-stake-activation"
version = "0.1.1"
description = "Client-side implementation of Solana RPC's GetStakeActivation"
documentation = "https://docs.rs/solana-rpc-get-stake-activation"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/solana-rpc-client-extensions"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = "1"
solana-rpc-client = "2.1.6"
solana-rpc-client-api = "2.1.6"
solana-sdk = "2.1.6"

[[example]]
name = "rpc"
